--- a/contact-us.html
+++ b/contact-us.html
@@ -156,6 +156,9 @@
                     <input type="text" class="form-control" name="phone-no" id="phone-no" placeholder="Phone no." required>
                 </div>
                 <input type="hidden" name="_template" value="table">
+                <input type="hidden" name="_next" value="https://yourdomain.co/thanks.html?param1=value&param2=value">
+
+
                 <br>    
                 <div class="mb-2 label-own">
                     <div class="disclaimer">**By clicking submit, means you have agreed to the terms and conditions stated within the clause.</div>
