--- a/sri-hartamas-house.html
+++ b/sri-hartamas-house.html
@@ -91,7 +91,7 @@
       <div class="row individual-profile mb-4">
         <div class="col-10 p-0">
           <div class="d-flex flex-column justify-content-xl-start px-4 py-4  mt-2 mb-3">
-              <div class="bread-crumb"><a class="directory" href="index.html">Home</a>  &nbsp; <span class="arrow">></span>  &nbsp;   <a class="directory" href="projects.html">Projects</a>&nbsp; <span class="arrow">></span>  &nbsp;   <a class="directory" href="taman-pantai-house.html">Taman Pantai House</a></div>
+              <div class="bread-crumb"><a class="directory" href="index.html">Home</a>  &nbsp; <span class="arrow">></span>  &nbsp;   <a class="directory" href="projects.html">Projects</a>&nbsp; <span class="arrow">></span>  &nbsp;   <a class="directory" href="sri-hartamas-house.html">Sri Hartamas House</a></div>
           </div> 
           <div class="container-fluid p-0"> 
 
