removed fancy box captions

--- a/balau.html
+++ b/balau.html
@@ -139,12 +139,12 @@
             <div id="" class="d-flex">
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/balau house/bafe5d88068253 2.png" data-caption="Caption1"><img
+                <a data-fancybox="gallery" href="img/balau house/bafe5d88068253 2.png" data-caption=""><img
                     src="img/balau house/bafe5d88068253 2.png" alt="" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/balau house/bafe5d88068253 3.png" data-caption="Caption1"><img
+                <a data-fancybox="gallery" href="img/balau house/bafe5d88068253 3.png" data-caption=""><img
                     src="img/balau house/bafe5d88068253 3.png" alt="" /></a>
               </div>
             </div>
