--- a/gallery.html
+++ b/gallery.html
@@ -104,80 +104,80 @@
           <div class="container-fluid">
             <div class="row me-6 pswp-gallery pswp-gallery--single-column" id="gallery--getting-started">
               <div class="col-lg-7 mb-3">
-                <a href="img/Rectangle 56.png" data-fancybox="gallery" data-caption="Optional caption">
+                <a href="img/Rectangle 56.png" data-fancybox="gallery" data-caption="">
                   <img src="img/Gallery-img/Rectangle 58.png" alt="" class="d-block w-100 rounded">
                 </a>
               </div>
               <div class="col-lg-3 mb-3">
-                <a href="img/Gallery-img/Rectangle 61.png" data-fancybox="gallery" data-caption="Optional caption">
+                <a href="img/Gallery-img/Rectangle 61.png" data-fancybox="gallery" data-caption="">
                   <img src="img/Gallery-img/Rectangle 61.png" alt="" class="d-block w-100 h-100 rounded">
                 </a>
               </div>
               <div class="col-lg-5 mb-3">
-                <a href="img/Gallery-img/Rectangle 59.png" data-fancybox="gallery" data-caption="Optional caption">
+                <a href="img/Gallery-img/Rectangle 59.png" data-fancybox="gallery" data-caption="">
                   <img src="img/Gallery-img/Rectangle 59.png" alt="" class="d-block w-100 rounded">
                 </a>
               </div>
               <div class="col-lg-5 mb-3">
-                <a href="img/Gallery-img/Rectangle 60.png" data-fancybox="gallery" data-caption="Optional caption">
+                <a href="img/Gallery-img/Rectangle 60.png" data-fancybox="gallery" data-caption="">
                   <img src="img/Gallery-img/Rectangle 60.png" alt="" class="d-block w-100 rounded">
                 </a>
               </div>
               <div class="col-lg-4 mb-3">
-                <a href="img/Gallery-img/Rectangle 65.png" data-fancybox="gallery" data-caption="Optional caption">
+                <a href="img/Gallery-img/Rectangle 65.png" data-fancybox="gallery" data-caption="">
                   <img src="img/Gallery-img/Rectangle 65.png" alt="" class="d-block w-100 rounded">
                 </a>
               </div>
               <div class="col-lg-6 mb-3">
                 <div class="col-lg-12 mb-3">
-                  <a href="img/Gallery-img/Rectangle 66.png" data-fancybox="gallery" data-caption="Optional caption">
+                  <a href="img/Gallery-img/Rectangle 66.png" data-fancybox="gallery" data-caption="">
                     <img src="img/Gallery-img/Rectangle 66.png" alt="" class="d-block w-100 rounded">
                   </a>
                 </div>
                 <div class="col-lg-12 mb-3">
-                  <a href="img/Gallery-img/Rectangle 67.png" data-fancybox="gallery" data-caption="Optional caption">
+                  <a href="img/Gallery-img/Rectangle 67.png" data-fancybox="gallery" data-caption="">
                     <img src="img/Gallery-img/Rectangle 67.png" alt="" class="d-block w-100 rounded">
                   </a>
                 </div>
               </div>
               <div class="col-lg-7 mb-3">
                 <div class="col-lg-12 mb-3 ">
-                  <a href="img/Rectangle 60.png" data-fancybox="gallery" data-caption="Optional caption">
+                  <a href="img/Rectangle 60.png" data-fancybox="gallery" data-caption="">
                     <img src="img/Gallery-img/Rectangle 68.png" alt="" class="d-block w-100 rounded">
                   </a>
                 </div>
               </div>
               <div class="col-lg-3 mb-3">
                 <div class="col-lg-12 mb-3 ">
-                  <a href="img/Gallery-img/Rectangle 69.png" data-fancybox="gallery" data-caption="Optional caption">
+                  <a href="img/Gallery-img/Rectangle 69.png" data-fancybox="gallery" data-caption="">
                     <img src="img/Gallery-img/Rectangle 69.png" alt="" class="d-block w-100 rounded">
                   </a>
                 </div>
               </div>
               <div class="col-lg-10 mb-3">
-                <a href="img/Gallery-img/Rectangle 70.png" data-fancybox="gallery" data-caption="Optional caption">
+                <a href="img/Gallery-img/Rectangle 70.png" data-fancybox="gallery" data-caption="">
                   <img src="img/Gallery-img/Rectangle 70.png" alt="" class="d-block w-100 rounded">
                 </a>
               </div>
 
               <div class="col-lg-3 mb-3">
-                <a href="img/Gallery-img/Rectangle 71.png" data-fancybox="gallery" data-caption="Optional caption">
+                <a href="img/Gallery-img/Rectangle 71.png" data-fancybox="gallery" data-caption="">
                   <img src="img/Gallery-img/Rectangle 71.png" alt="" class="d-block w-100 rounded">
                 </a>
               </div>
               <div class="col-lg-4 mb-3">
-                <a href="img/Gallery-img/Rectangle 73.png" data-fancybox="gallery" data-caption="Optional caption">
+                <a href="img/Gallery-img/Rectangle 73.png" data-fancybox="gallery" data-caption="">
                   <img src="img/Gallery-img/Rectangle 73.png" alt="" class="d-block w-100 rounded">
                 </a>
               </div>
               <div class="col-lg-3 mb-3">
                 <div class="col-lg-12 mb-3">
-                  <a href="img/Gallery-img/Rectangle 72.png" data-fancybox="gallery" data-caption="Optional caption">
+                  <a href="img/Gallery-img/Rectangle 72.png" data-fancybox="gallery" data-caption="">
                     <img src="img/Gallery-img/Rectangle 72.png" alt="" class="d-block w-100 rounded">
                   </a>
                 </div>
                 <div class="col-lg-12 mb-3">
-                  <a href="img/Gallery-img/Rectangle 74.png" data-fancybox="gallery" data-caption="Optional caption">
+                  <a href="img/Gallery-img/Rectangle 74.png" data-fancybox="gallery" data-caption="">
                     <img src="img/Gallery-img/Rectangle 74.png" alt="" class="d-block w-100 rounded">
                   </a>
                 </div>
