--- a/luma-hotel.html
+++ b/luma-hotel.html
@@ -137,42 +137,42 @@
 
             <div id="project-slider" class="owl-theme owl-carousel">
               <div class="project">
-                <a data-fancybox="gallery" href="img/Luma Hotel/1.png" data-caption="Caption1"><img
-                    src="img/Luma Hotel/1.png" alt="" /></a>
+                <a data-fancybox="gallery" href="img/Luma Hotel/1.png" data-caption=""><img src="img/Luma Hotel/1.png"
+                    alt="" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/Luma Hotel/2.png" data-caption="Caption1"><img
-                    src="img/Luma Hotel/2.png" alt="" /></a>
+                <a data-fancybox="gallery" href="img/Luma Hotel/2.png" data-caption=""><img src="img/Luma Hotel/2.png"
+                    alt="" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/Luma Hotel/3.png" data-caption="Caption1"><img
-                    src="img/Luma Hotel/3.png" alt="" /></a>
+                <a data-fancybox="gallery" href="img/Luma Hotel/3.png" data-caption=""><img src="img/Luma Hotel/3.png"
+                    alt="" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/Luma Hotel/4.png" data-caption="Caption1"><img
-                    src="img/Pantai-house/4.png" alt="" /></a>
+                <a data-fancybox="gallery" href="img/Luma Hotel/4.png" data-caption=""><img src="img/Pantai-house/4.png"
+                    alt="" /></a>
               </div>
               <div class="project">
-                <a data-fancybox="gallery" href="img/Luma Hotel/1.png" data-caption="Caption1"><img
-                    src="img/Luma Hotel/1.png" alt="" /></a>
-              </div>
-
-              <div class="project">
-                <a data-fancybox="gallery" href="img/Luma Hotel/2.png" data-caption="Caption1"><img
-                    src="img/Luma Hotel/2.png" alt="" /></a>
+                <a data-fancybox="gallery" href="img/Luma Hotel/1.png" data-caption=""><img src="img/Luma Hotel/1.png"
+                    alt="" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/Luma Hotel/3.png" data-caption="Caption1"><img
-                    src="img/Luma Hotel/3.png" alt="" /></a>
+                <a data-fancybox="gallery" href="img/Luma Hotel/2.png" data-caption=""><img src="img/Luma Hotel/2.png"
+                    alt="" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/Luma Hotel/4.png" data-caption="Caption1"><img
-                    src="img/Pantai-house/4.png" alt="" /></a>
+                <a data-fancybox="gallery" href="img/Luma Hotel/3.png" data-caption=""><img src="img/Luma Hotel/3.png"
+                    alt="" /></a>
+              </div>
+
+              <div class="project">
+                <a data-fancybox="gallery" href="img/Luma Hotel/4.png" data-caption=""><img src="img/Pantai-house/4.png"
+                    alt="" /></a>
               </div>
             </div>
 
