--- a/showcase-hotel.html
+++ b/showcase-hotel.html
@@ -138,41 +138,41 @@
 
             <div id="project-slider" class="owl-theme owl-carousel">
               <div class="project">
-                <a data-fancybox="gallery" href="img/showcase hotel/1.png" data-caption="Caption1"><img
+                <a data-fancybox="gallery" href="img/showcase hotel/1.png" data-caption=""><img
                     src="img/showcase hotel/1.png" alt="" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/showcase hotel/2.png" data-caption="Caption1"><img
+                <a data-fancybox="gallery" href="img/showcase hotel/2.png" data-caption=""><img
                     src="img/showcase hotel/2.png" alt="" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/showcase hotel/3.png" data-caption="Caption1"><img
+                <a data-fancybox="gallery" href="img/showcase hotel/3.png" data-caption=""><img
                     src="img/showcase hotel/3.png" alt="" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/showcase hotel/4.png" data-caption="Caption1"><img
+                <a data-fancybox="gallery" href="img/showcase hotel/4.png" data-caption=""><img
                     src="img/showcase hotel/4.png" alt="" /></a>
               </div>
               <div class="project">
-                <a data-fancybox="gallery" href="img/showcase hotel/1.png" data-caption="Caption1"><img
+                <a data-fancybox="gallery" href="img/showcase hotel/1.png" data-caption=""><img
                     src="img/showcase hotel/1.png" alt="" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/showcase hotel/2.png" data-caption="Caption1"><img
+                <a data-fancybox="gallery" href="img/showcase hotel/2.png" data-caption=""><img
                     src="img/showcase hotel/2.png" alt="" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/showcase hotel/3.png" data-caption="Caption1"><img
+                <a data-fancybox="gallery" href="img/showcase hotel/3.png" data-caption=""><img
                     src="img/showcase hotel/3.png" alt="" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/showcase hotel/4.png" data-caption="Caption1"><img
+                <a data-fancybox="gallery" href="img/showcase hotel/4.png" data-caption=""><img
                     src="img/showcase hotel/4.png" alt="" /></a>
               </div>
             </div>
