--- a/sri-hartamas-house.html
+++ b/sri-hartamas-house.html
@@ -137,43 +137,43 @@
 
             <div id="project-slider" class="owl-theme owl-carousel">
               <div class="project">
-                <a data-fancybox="gallery" href="img/hartamas/1.png" data-caption="Caption1"><img
-                    src="img/hartamas/1.png" alt="" class="w-100 d-block" /></a>
+                <a data-fancybox="gallery" href="img/hartamas/1.png" data-caption=""><img src="img/hartamas/1.png"
+                    alt="" class="w-100 d-block" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/hartamas/2.png" data-caption="Caption1"><img
-                    src="img/Pantai-house/2.png" alt="" class="w-100 d-block" /></a>
+                <a data-fancybox="gallery" href="img/hartamas/2.png" data-caption=""><img src="img/Pantai-house/2.png"
+                    alt="" class="w-100 d-block" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/hartamas/3.png" data-caption="Caption1"><img
-                    src="img/hartamas/3.png" alt="" class="w-100 d-block" /></a>
+                <a data-fancybox="gallery" href="img/hartamas/3.png" data-caption=""><img src="img/hartamas/3.png"
+                    alt="" class="w-100 d-block" /></a>
               </div>
 
               <div class="project">
                 <a data-fancybox="gallery" href="img/hartamas/6729c9ad77a03655a899cfc73f194c14 3.png"
-                  data-caption="Caption1"><img src="img/hartamas/6729c9ad77a03655a899cfc73f194c14 3.png" alt=""
+                  data-caption=""><img src="img/hartamas/6729c9ad77a03655a899cfc73f194c14 3.png" alt=""
                     class="w-100 d-block" /></a>
               </div>
               <div class="project">
-                <a data-fancybox="gallery" href="img/hartamas/1.png" data-caption="Caption1"><img
-                    src="img/hartamas/1.png" alt="" class="w-100 d-block" /></a>
+                <a data-fancybox="gallery" href="img/hartamas/1.png" data-caption=""><img src="img/hartamas/1.png"
+                    alt="" class="w-100 d-block" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/hartamas/2.png" data-caption="Caption1"><img
-                    src="img/Pantai-house/2.png" alt="" class="w-100 d-block" /></a>
+                <a data-fancybox="gallery" href="img/hartamas/2.png" data-caption=""><img src="img/Pantai-house/2.png"
+                    alt="" class="w-100 d-block" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/hartamas/3.png" data-caption="Caption1"><img
-                    src="img/hartamas/3.png" alt="" class="w-100 d-block" /></a>
+                <a data-fancybox="gallery" href="img/hartamas/3.png" data-caption=""><img src="img/hartamas/3.png"
+                    alt="" class="w-100 d-block" /></a>
               </div>
 
               <div class="project">
                 <a data-fancybox="gallery" href="img/hartamas/6729c9ad77a03655a899cfc73f194c14 3.png"
-                  data-caption="Caption1"><img src="img/hartamas/6729c9ad77a03655a899cfc73f194c14 3.png" alt=""
+                  data-caption=""><img src="img/hartamas/6729c9ad77a03655a899cfc73f194c14 3.png" alt=""
                     class="w-100 d-block" /></a>
               </div>
             </div>
