--- a/birch.html
+++ b/birch.html
@@ -137,42 +137,42 @@
 
             <div id="project-slider" class="owl-theme owl-carousel">
               <div class="project">
-                <a data-fancybox="gallery" href="img/birch/1.png" data-caption="Caption1"><img src="img/birch/1.png"
+                <a data-fancybox="gallery" href="img/birch/1.png" data-caption=""><img src="img/birch/1.png"
                     alt="" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/birch/2.png" data-caption="Caption1"><img src="img/birch/2.png"
+                <a data-fancybox="gallery" href="img/birch/2.png" data-caption=""><img src="img/birch/2.png"
                     alt="" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/birch/3.png" data-caption="Caption1"><img src="img/birch/3.png"
+                <a data-fancybox="gallery" href="img/birch/3.png" data-caption=""><img src="img/birch/3.png"
                     alt="" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/birch/4.png" data-caption="Caption1"><img
-                    src="img/Pantai-house/4.png" alt="" /></a>
+                <a data-fancybox="gallery" href="img/birch/4.png" data-caption=""><img src="img/birch/4.png"
+                    alt="" /></a>
               </div>
               <div class="project">
-                <a data-fancybox="gallery" href="img/birch/1.png" data-caption="Caption1"><img src="img/birch/1.png"
+                <a data-fancybox="gallery" href="img/birch/1.png" data-caption=""><img src="img/birch/1.png"
                     alt="" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/birch/2.png" data-caption="Caption1"><img src="img/birch/2.png"
+                <a data-fancybox="gallery" href="img/birch/2.png" data-caption=""><img src="img/birch/2.png"
                     alt="" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/birch/3.png" data-caption="Caption1"><img src="img/birch/3.png"
+                <a data-fancybox="gallery" href="img/birch/3.png" data-caption=""><img src="img/birch/3.png"
                     alt="" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/birch/4.png" data-caption="Caption1"><img
-                    src="img/Pantai-house/4.png" alt="" /></a>
+                <a data-fancybox="gallery" href="img/birch/4.png" data-caption=""><img src="img/birch/4.png"
+                    alt="" /></a>
               </div>
             </div>
 
