--- a/taman-pantai-house.html
+++ b/taman-pantai-house.html
@@ -137,41 +137,41 @@
 
             <div id="project-slider" class="owl-theme owl-carousel">
               <div class="project">
-                <a data-fancybox="gallery" href="img/Pantai-house/1.png" data-caption="Caption1"><img
+                <a data-fancybox="gallery" href="img/Pantai-house/1.png" data-caption=""><img
                     src="img/Pantai-house/1.png" alt="" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/Pantai-house/2.png" data-caption="Caption1"><img
+                <a data-fancybox="gallery" href="img/Pantai-house/2.png" data-caption=""><img
                     src="img/Pantai-house/2.png" alt="" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/Pantai-house/3.png" data-caption="Caption1"><img
+                <a data-fancybox="gallery" href="img/Pantai-house/3.png" data-caption=""><img
                     src="img/Pantai-house/3.png" alt="" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/Pantai-house/4.png" data-caption="Caption1"><img
+                <a data-fancybox="gallery" href="img/Pantai-house/4.png" data-caption=""><img
                     src="img/Pantai-house/4.png" alt="" /></a>
               </div>
               <div class="project">
-                <a data-fancybox="gallery" href="img/Pantai-house/1.png" data-caption="Caption1"><img
+                <a data-fancybox="gallery" href="img/Pantai-house/1.png" data-caption=""><img
                     src="img/Pantai-house/1.png" alt="" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/Pantai-house/2.png" data-caption="Caption1"><img
+                <a data-fancybox="gallery" href="img/Pantai-house/2.png" data-caption=""><img
                     src="img/Pantai-house/2.png" alt="" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/Pantai-house/3.png" data-caption="Caption1"><img
+                <a data-fancybox="gallery" href="img/Pantai-house/3.png" data-caption=""><img
                     src="img/Pantai-house/3.png" alt="" /></a>
               </div>
 
               <div class="project">
-                <a data-fancybox="gallery" href="img/Pantai-house/4.png" data-caption="Caption1"><img
+                <a data-fancybox="gallery" href="img/Pantai-house/4.png" data-caption=""><img
                     src="img/Pantai-house/4.png" alt="" /></a>
               </div>
             </div>
