--- a/index.html
+++ b/index.html
@@ -32,32 +32,32 @@
   <!-- Sidebar -->
   <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white">
     <div class="sidebar-brand mx-4  d-flex align-items-center">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="/">
         <span>KYZEN | <br>BINA </span>
       </a>
     </div>
     <div class="">
       <div class="list-group list-group-flush mx-3 mt-4">
-        <a href="studio.html" class="list-group-item list-group-item-action py-2 " aria-current="true">
+        <a href="/studio" class="list-group-item list-group-item-action py-2 " aria-current="true">
           <div class="icon-ani">
             <p><i class='bx bxs-home me-3'></i>
               <span>Studio</span>
             </p>
           </div>
         </a>
-        <a href="projects.html" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
+        <a href="/project" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
           <div class="icon-ani">
             <i class='bx bxs-building-house'></i>
             <span>Projects</span>
           </div>
         </a>
-        <a href="gallery.html" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
+        <a href="/gallery" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
           <div class="icon-ani">
             <i class='bx bxs-home me-3'></i>
             <span>Gallery</span>
           </div>
         </a>
-        <a href="/contact-us.html" class="list-group-item list-group-item-action py-2" aria-current="true">
+        <a href="/contact-us" class="list-group-item list-group-item-action py-2" aria-current="true">
           <button class="btn">
             Contact Us
           </button>
@@ -74,7 +74,7 @@
     <!-- Container wrapper -->
     <div class="container-fluid">
       <!-- Brand -->
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="/">
         <span>KYZEN | BINA </span>
       </a>
       <!-- Toggle button -->
@@ -113,51 +113,41 @@
               <div class="carousel-item active">
                 <img src="img/Rectangle 56.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption">
-                  <h5>Your Dream House</h5>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione, suscipit reiciendis neque minima
-                    est accusamus assumenda illum praesentium cum autem in esse rerum ullam id facere eum, vitae quaerat
-                    sed.</p>
-                  <p><a href="#" class="btn btn-warning mt-3">Learn More</a></p>
+                  <h5>Showcase Hotel</h5>
+                  <p>Boutique hotel serves as a working experiment for the design firm who also runs this hotel.</p>
+                  <p><a href="projects/showcase-hotel" class="btn btn-warning mt-3">Learn More</a></p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="img/Rectangle 57.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption">
-                  <h5>Always Dedicated</h5>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione, suscipit reiciendis neque minima
-                    est accusamus assumenda illum praesentium cum autem in esse rerum ullam id facere eum, vitae quaerat
-                    sed.</p>
-                  <p><a href="#" class="btn btn-warning mt-3">Learn More</a></p>
+                  <h5>Luma Hotel</h5>
+                  <p>The first designer hotel in Kota Kinabalu</p>
+                  <p><a href="projects/luma-hotel" class="btn btn-warning mt-3">Learn More</a></p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="img/Rectangle 58.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption">
-                  <h5>True Construction</h5>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione, suscipit reiciendis neque minima
-                    est accusamus assumenda illum praesentium cum autem in esse rerum ullam id facere eum, vitae quaerat
-                    sed.</p>
-                  <p><a href="#" class="btn btn-warning mt-3">Learn More</a></p>
+                  <h5>Balau House</h5>
+                  <p>A family house for 4 with a mixture of modern and industrialist look</p>
+                  <p><a href="projects/balau" class="btn btn-warning mt-3">Learn More</a></p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="img/Rectangle 59.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption">
-                  <h5>Always Dedicated</h5>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione, suscipit reiciendis neque minima
-                    est accusamus assumenda illum praesentium cum autem in esse rerum ullam id facere eum, vitae quaerat
-                    sed.</p>
-                  <p><a href="#" class="btn btn-warning mt-3">Learn More</a></p>
+                  <h5>Luma Hotel</h5>
+                  <p>A “second home” for you while exploring the “Land Below The Wind”.</p>
+                  <p><a href="projects/luma-hotel" class="btn btn-warning mt-3">Learn More</a></p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="img/Rectangle 60.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption">
-                  <h5>Always Dedicated</h5>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione, suscipit reiciendis neque minima
-                    est accusamus assumenda illum praesentium cum autem in esse rerum ullam id facere eum, vitae quaerat
-                    sed.</p>
-                  <p><a href="#" class="btn btn-warning mt-3">Learn More</a></p>
+                  <h5>Birch Cafe</h5>
+                  <p>They are famous for their burnt cheesecake, but truly, people like  enjoy the space more.</p>
+                  <p><a href="projects/birch" class="btn btn-warning mt-3">Learn More</a></p>
                 </div>
               </div>
 
