link ..html removed

--- a/projects.html
+++ b/projects.html
@@ -75,7 +75,7 @@
     <!-- Container wrapper -->
     <div class="container-fluid 	">
       <!-- Brand -->
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="/">
         <span>KYZEN | BINA </span>
       </a>
       <!-- Toggle button -->
@@ -97,8 +97,8 @@
       <div class="row individual-profile mb-4">
         <div class="col-12">
           <div class="d-flex flex-column justify-content-xl-start px-4 py-4  mt-2 mb-3">
-            <div class="bread-crumb"><a class="directory" href="index.html">Home</a> &nbsp; <span class="arrow">></span>
-              &nbsp; <a class="directory" href="projects.html">Projects</a></div>
+            <div class="bread-crumb"><a class="directory" href="/">Home</a> &nbsp; <span class="arrow">></span>
+              &nbsp; <a class="directory" href="/projects">Projects</a></div>
           </div>
           <section>
             <div class="container py-0 ">
@@ -135,7 +135,7 @@
                         </div>
                       </div>
                     </div>
-                    <a href="balau.html">
+                    <a href="/projects/balau">
                       <img src="img/Rectangle 51.png" class="d-block w-100" alt="Balau House" />
                       <div class="row sub-img-div g-1 py-1">
                         <div class="sub-img col-4 "><img src="img/Rectangle 52.png" class=" w-100" alt="..."></div>
@@ -146,7 +146,7 @@
 
                     <div class="card-body p-0 mt-2">
                       <div class="mb-3">
-                        <a href="balau.html">
+                        <a href="/projects/balau">
                           <h5 class="">Balau House</h5>
                         </a>
                       </div>
@@ -194,7 +194,7 @@
                         </div>
                       </div>
                     </div>
-                    <a href="sri-hartamas-house.html">
+                    <a href="/projects/sri-hartamas-house">
                       <img src="img/Sri-hartamas 1.png" alt="Balau House" class="d-block w-100" />
                       <div class="row sub-img-div g-1 py-1">
                         <div class="sub-img col-4 "><img src="img/Sri-hartamas 2.png" class=" w-100" alt="..."></div>
@@ -205,7 +205,7 @@
 
                     <div class="card-body p-0 mt-2">
                       <div class="mb-3">
-                        <a href="sri-hartamas-house.html">
+                        <a href="/projects/sri-hartamas-house">
                           <h5 class="">Sri Hartamas House</h5>
                         </a>
                       </div>
@@ -249,7 +249,7 @@
                         </div>
                       </div>
                     </div>
-                    <a href="showcase-hotel.html">
+                    <a href="/projects/showcase-hotel">
                       <img src="img/Showcase Hotel1.png" class="w-100 d-block" alt="Balau House" />
                       <div class="row sub-img-div g-1 py-1">
                         <div class="sub-img col-4 "><img src="img/Showcase Hotel 2.png" class=" w-100" alt="..."></div>
@@ -259,7 +259,7 @@
                     </a>
                     <div class="card-body p-0 mt-2">
                       <div class="mb-3">
-                        <a href="showcase-hotel.html">
+                        <a href="/projects/showcase-hotel">
                           <h5 class="">Showcase Hotel</h5>
                         </a>
                       </div>
@@ -303,7 +303,7 @@
                         </div>
                       </div>
                     </div>
-                    <a href="luma-hotel.html">
+                    <a href="/projects/luma-hotel">
                       <img src="img/Luma 1.png" class="d-block w-100" alt="Balau House" />
                       <div class="row sub-img-div g-1 py-1">
                         <div class="sub-img col-4 "><img src="img/Luma2.png" class=" w-100" alt="..."></div>
@@ -314,7 +314,7 @@
 
                     <div class="card-body p-0 mt-2">
                       <div class="mb-3">
-                        <a href="luma-hotel.html">
+                        <a href="/projects/luma-hotel">
                           <h5 class="">Luma Hotel</h5>
                         </a>
                       </div>
@@ -358,7 +358,7 @@
                         </div>
                       </div>
                     </div>
-                    <a href="taman-pantai-house.html">
+                    <a href="/projects/taman-pantai-house">
                       <img src="img/pantai house 1.png" class="d-block w-100" alt="Balau House" />
                       <div class="row sub-img-div g-1 py-1">
                         <div class="sub-img col-4 "><img src="img/pantai house 2.png" class=" w-100" alt="..."></div>
@@ -369,7 +369,7 @@
 
                     <div class="card-body p-0 mt-2">
                       <div class="mb-3">
-                        <a href="taman-pantai-house.html">
+                        <a href="/projects/taman-pantai-house">
                           <h5 class="">Taman Pantai House</h5>
                         </a>
                       </div>
@@ -413,7 +413,7 @@
                         </div>
                       </div>
                     </div>
-                    <a href="birch.html">
+                    <a href="/projects/birch">
                       <img src="img/birch1.png" class="d-block w-100" alt="Balau House" />
                       <div class="row sub-img-div g-1 py-1">
                         <div class="sub-img col-4 "><img src="img/birch2.png" class=" w-100" alt="..."></div>
@@ -424,7 +424,7 @@
 
                     <div class="card-body p-0 mt-2">
                       <div class="mb-3">
-                        <a href="birch.html">
+                        <a href="/projects/birch">
                           <h5 class="">Birch @ DCM </h5>
                         </a>
                       </div>
