--- a/projects/luma-hotel.html
+++ b/projects/luma-hotel.html
@@ -32,7 +32,7 @@
   <!-- Sidebar -->
   <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white">
     <div class="sidebar-brand mx-4  d-flex align-items-center">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="/">
         <span>KYZEN | <br>BINA </span>
       </a>
     </div>
@@ -74,7 +74,7 @@
     <!-- Container wrapper -->
     <div class="container-fluid 	">
       <!-- Brand -->
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="/">
         <span>KYZEN | BINA </span>
       </a>
       <!-- Toggle button -->
@@ -96,7 +96,7 @@
       <div class="row individual-profile mb-4">
         <div class="col-10 p-0">
           <div class="d-flex flex-column justify-content-xl-start px-4 py-4  mt-2 mb-3">
-            <div class="bread-crumb"><a class="directory" href="index.html">Home</a> &nbsp; <span class="arrow">></span>
+            <div class="bread-crumb"><a class="directory" href="/">Home</a> &nbsp; <span class="arrow">></span>
               &nbsp; <a class="directory" href="projects.html">Projects</a>&nbsp; <span class="arrow">></span> &nbsp; <a
                 class="directory" href="luma-hotel.html">Luma Hotel</a></div>
           </div>
