--- a/studio.html
+++ b/studio.html
@@ -32,13 +32,13 @@
   <!-- Sidebar -->
   <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white">
     <div class="sidebar-brand mx-4  d-flex align-items-center">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="/">
         <span>KYZEN | <br>BINA </span>
       </a>
     </div>
     <div class="position-sticky">
       <div class="list-group list-group-flush mx-3 mt-4">
-        <a href="studio.html" class="list-group-item list-group-item-action py-2 " aria-current="true">
+        <a href="/studio" class="list-group-item list-group-item-action py-2 " aria-current="true">
           <div class="icon-ani">
             <p><i class='bx bxs-home me-3'></i>
               <span>Studio</span>
@@ -74,7 +74,7 @@
     <!-- Container wrapper -->
     <div class="container-fluid 	">
       <!-- Brand -->
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="/">
         <span>KYZEN | BINA </span>
       </a>
       <!-- Toggle button -->
@@ -96,8 +96,8 @@
       <div class="row contact-us mb-4">
         <div class="col-12">
           <div class="d-flex flex-column justify-content-center px-4 py-4  mt-2 mb-3">
-            <div class="bread-crumb"><a class="directory" href="index.html">Home</a> &nbsp; <span class="arrow">></span>
-              &nbsp; <a class="directory" href="studio.html">Studio</a></div>
+            <div class="bread-crumb"><a class="directory" href="/">Home</a> &nbsp; <span class="arrow">></span>
+              &nbsp; <a class="directory" href="/studio">Studio</a></div>
           </div>
           <div class="about row d-flex justify-content-center">
             <div class="col-8">
