--- a/studio/may-profile.html
+++ b/studio/may-profile.html
@@ -32,32 +32,32 @@
   <!-- Sidebar -->
   <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white">
     <div class="sidebar-brand mx-4  d-flex align-items-center">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="/">
         <span>KYZEN | <br>BINA </span>
       </a>
     </div>
     <div class="position-sticky">
       <div class="list-group list-group-flush mx-3 mt-4">
-        <a href="studio.html" class="list-group-item list-group-item-action py-2 " aria-current="true">
+        <a href="/studio" class="list-group-item list-group-item-action py-2 " aria-current="true">
           <div class="icon-ani">
             <p><i class='bx bxs-home me-3'></i>
               <span>Studio</span>
             </p>
           </div>
         </a>
-        <a href="projects.html" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
+        <a href="/projects" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
           <div class="icon-ani">
             <i class='bx bxs-building-house'></i>
             <span>Projects</span>
           </div>
         </a>
-        <a href="gallery.html" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
+        <a href="/gallery" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
           <div class="icon-ani">
             <i class='bx bxs-home me-3'></i>
             <span>Gallery</span>
           </div>
         </a>
-        <a href="contact-us.html" class="list-group-item list-group-item-action py-2" aria-current="true">
+        <a href="/contact-us" class="list-group-item list-group-item-action py-2" aria-current="true">
           <button class="btn">
             Contact Us
           </button>
@@ -74,7 +74,7 @@
     <!-- Container wrapper -->
     <div class="container-fluid 	">
       <!-- Brand -->
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="/">
         <span>KYZEN | BINA </span>
       </a>
       <!-- Toggle button -->
@@ -96,9 +96,9 @@
       <div class="row individual-profile mb-4">
         <div class="col-12">
           <div class="d-flex flex-column justify-content-xl-start px-4 py-4  mt-2 mb-3">
-            <div class="bread-crumb"><a class="directory" href="index.html">Home</a> &nbsp; <span class="arrow">></span>
-              &nbsp; <a class="directory" href="studio.html">Studio</a>&nbsp; <span class="arrow">></span> &nbsp; <a
-                class="directory" href="may-profile.html">May Koay</a> </div>
+            <div class="bread-crumb"><a class="directory" href="/">Home</a> &nbsp; <span class="arrow">></span>
+              &nbsp; <a class="directory" href="/studio">Studio</a>&nbsp; <span class="arrow">></span> &nbsp; <a
+                class="directory" href="/studio/may-profile">May Koay</a> </div>
           </div>
           <div class="row d-flex justify-content-start">
             <div class="col-lg-5 col-xs-12">
