--- a/gallery.html
+++ b/gallery.html
@@ -47,7 +47,7 @@
             </p>
           </div>
         </a>
-        <a href="/project" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
+        <a href="/projects" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
           <div class="icon-ani">
             <i class='bx bxs-building-house'></i>
             <span>Projects</span>
@@ -99,7 +99,7 @@
         <div class="col-10 p-0">
           <div class="d-flex flex-column justify-content-xl-start px-4 py-4  mt-2 mb-3">
             <div class="bread-crumb"><a class="directory" href="/">Home</a> &nbsp; <span class="arrow">></span>
-              &nbsp; <a class="directory" href="gallery.html">Gallery</a></div>
+              &nbsp; <a class="directory" href="/gallery">Gallery</a></div>
           </div>
           <div class="container-fluid">
             <div class="row me-6 pswp-gallery pswp-gallery--single-column" id="gallery--getting-started">
