link typo fixed

--- a/studio.html
+++ b/studio.html
@@ -45,19 +45,19 @@
             </p>
           </div>
         </a>
-        <a href="projects.html" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
+        <a href="/projects" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
           <div class="icon-ani">
             <i class='bx bxs-building-house'></i>
             <span>Projects</span>
           </div>
         </a>
-        <a href="gallery.html" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
+        <a href="/gallery" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
           <div class="icon-ani">
             <i class='bx bxs-home me-3'></i>
             <span>Gallery</span>
           </div>
         </a>
-        <a href="contact-us.html" class="list-group-item list-group-item-action py-2" aria-current="true">
+        <a href="/contact-us" class="list-group-item list-group-item-action py-2" aria-current="true">
           <button class="btn">
             Contact Us
           </button>
@@ -128,7 +128,7 @@
               <h3>Our Key</h3>
               <div class="key row g-4 mt-4 d-flex justify-content-center">
                 <div class="col-lg-4 col-sm-6 mb-3">
-                  <a href="kelvin-profile.html">
+                  <a href="/studio/kelvin-profile">
                     <img class="pb-4 mb-3" src="img/Ellipse 4.jpg" alt="Kelvin Tan Portrait">
                     <h6>Kelvin Tan</h6>
                     <div class="profile-details">Project Manager <br>
@@ -139,7 +139,7 @@
                 </div>
 
                 <div class="col-lg-4 col-sm-6 mb-3">
-                  <a href="may-profile.html">
+                  <a href="/studio/may-profile">
                     <img class="pb-4 mb-3" src="img/Ellipse 5.jpg" alt="Kelvin Tan Portrait">
                     <h6 class="d-block mx-auto">May Koay</h6>
                     <div class="profile-details">Architect/ Interior Designer <br>
@@ -151,7 +151,7 @@
                 </div>
 
                 <div class="col-lg-4 col-sm-6 mb-3">
-                  <a href="sam-profile.html">
+                  <a href="/studio/sam-profile">
                     <img class="pb-4 mb-3" src="img/Ellipse 6 (1).png" alt="Kelvin Tan Portrait">
                     <h6>Sam Wong</h6>
                     <div class="profile-details">Technical Director <br>
