--- a/projects/luma-hotel.html
+++ b/projects/luma-hotel.html
@@ -18,12 +18,12 @@
   <!-- Boxicon CDN -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
   <!-- CSS -->
-  <link rel="stylesheet" href="css/bootstrap.min.css" />
-  <link rel="stylesheet" href="css/boxicons.min.css">
-  <link rel="stylesheet" href="css/owl.carousel.min.css" />
-  <link rel="stylesheet" href="css/owl.theme.default.min.css" />
+  <link rel="stylesheet" href="../css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../css/boxicons.min.css">
+  <link rel="stylesheet" href="../css/owl.carousel.min.css" />
+  <link rel="stylesheet" href="../css/owl.theme.default.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 
   <title>Kyzen Bina</title>
 </head>
@@ -38,26 +38,26 @@
     </div>
     <div class="position-sticky">
       <div class="list-group list-group-flush mx-3 mt-4">
-        <a href="studio.html" class="list-group-item list-group-item-action py-2 " aria-current="true">
+        <a href="/studio" class="list-group-item list-group-item-action py-2 " aria-current="true">
           <div class="icon-ani">
             <p><i class='bx bxs-home me-3'></i>
               <span>Studio</span>
             </p>
           </div>
         </a>
-        <a href="projects.html" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
+        <a href="/projects" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
           <div class="icon-ani">
             <i class='bx bxs-building-house'></i>
             <span>Projects</span>
           </div>
         </a>
-        <a href="gallery.html" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
+        <a href="/gallery" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
           <div class="icon-ani">
             <i class='bx bxs-home me-3'></i>
             <span>Gallery</span>
           </div>
         </a>
-        <a href="/contact-us.html" class="list-group-item list-group-item-action py-2" aria-current="true">
+        <a href="/contact-us" class="list-group-item list-group-item-action py-2" aria-current="true">
           <button class="btn">
             Contact Us
           </button>
@@ -97,8 +97,8 @@
         <div class="col-10 p-0">
           <div class="d-flex flex-column justify-content-xl-start px-4 py-4  mt-2 mb-3">
             <div class="bread-crumb"><a class="directory" href="/">Home</a> &nbsp; <span class="arrow">></span>
-              &nbsp; <a class="directory" href="projects.html">Projects</a>&nbsp; <span class="arrow">></span> &nbsp; <a
-                class="directory" href="luma-hotel.html">Luma Hotel</a></div>
+              &nbsp; <a class="directory" href="/projects">Projects</a>&nbsp; <span class="arrow">></span> &nbsp; <a
+                class="directory" href="/projects/luma-hotel">Luma Hotel</a></div>
           </div>
           <div class="container-fluid p-0">
 
@@ -216,13 +216,13 @@
     </section>
   </footer>
   <!-- Footer -->
-  <script src="js/jquery.min.js"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/mdb.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
+  <script src="../js/jquery.min.js"></script>
+  <script src="../js/bootstrap.bundle.min.js"></script>
+  <script src="../js/mdb.min.js"></script>
+  <script src="../js/owl.carousel.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
   <!-- <script src="/js/app.js"></script> -->
-  <script src="js/slider.js"></script>
+  <script src="../js/slider.js"></script>
 </body>
 
 </html>
