--- a/studio/may-profile.html
+++ b/studio/may-profile.html
@@ -18,12 +18,12 @@
   <!-- Boxicon CDN -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
   <!-- CSS -->
-  <link rel="stylesheet" href="css/bootstrap.min.css" />
-  <link rel="stylesheet" href="css/mdb.min.css">
-  <link rel="stylesheet" href="css/boxicons.min.css">
-  <link rel="stylesheet" href="css/owl.carousel.min.css" />
-  <link rel="stylesheet" href="css/owl.theme.default.min.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="../css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../css/mdb.min.css">
+  <link rel="stylesheet" href="../css/boxicons.min.css">
+  <link rel="stylesheet" href="../css/owl.carousel.min.css" />
+  <link rel="stylesheet" href="../css/owl.theme.default.min.css" />
+  <link rel="stylesheet" href="../css/style.css" />
 
   <title>Kyzen Bina</title>
 </head>
@@ -165,11 +165,11 @@
 
 
 
-  <script src="js/jquery.min.js"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/mdb.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/app.js"></script>
+  <script src="../js/jquery.min.js"></script>
+  <script src="../js/bootstrap.bundle.min.js"></script>
+  <script src="../js/mdb.min.js"></script>
+  <script src="../js/owl.carousel.min.js"></script>
+  <script src="../js/app.js"></script>
 </body>
 
 </html>
