--- a/studio/sam-profile.html
+++ b/studio/sam-profile.html
@@ -18,12 +18,12 @@
   <!-- Boxicon CDN -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
   <!-- CSS -->
-  <link rel="stylesheet" href="css/bootstrap.min.css" />
-  <link rel="stylesheet" href="css/mdb.min.css">
-  <link rel="stylesheet" href="css/boxicons.min.css">
-  <link rel="stylesheet" href="css/owl.carousel.min.css" />
-  <link rel="stylesheet" href="css/owl.theme.default.min.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="../css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../css/mdb.min.css">
+  <link rel="stylesheet" href="../css/boxicons.min.css">
+  <link rel="stylesheet" href="../css/owl.carousel.min.css" />
+  <link rel="stylesheet" href="../css/owl.theme.default.min.css" />
+  <link rel="stylesheet" href="../css/style.css" />
 
   <title>Kyzen Bina</title>
 </head>
@@ -51,13 +51,13 @@
             <span>Projects</span>
           </div>
         </a>
-        <a href="gallery.html" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
+        <a href="/gallery" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
           <div class="icon-ani">
             <i class='bx bxs-home me-3'></i>
             <span>Gallery</span>
           </div>
         </a>
-        <a href="contact-us.html" class="list-group-item list-group-item-action py-2" aria-current="true">
+        <a href="/contact-us" class="list-group-item list-group-item-action py-2" aria-current="true">
           <button class="btn">
             Contact Us
           </button>
@@ -98,7 +98,7 @@
           <div class="d-flex flex-column justify-content-xl-start px-4 py-4  mt-2 mb-3">
             <div class="bread-crumb"><a class="directory" href="/">Home</a> &nbsp; <span class="arrow">></span>
               &nbsp; <a class="directory" href="/studio">Studio</a>&nbsp; <span class="arrow">></span> &nbsp; <a
-                class="directory" href="sam-profile.html">Sam Wong</a> </div>
+                class="directory" href="/studio/sam-profile">Sam Wong</a> </div>
           </div>
           <div class="row d-flex justify-content-start">
             <div class="col-lg-5 col-xs-12">
@@ -163,11 +163,11 @@
 
 
 
-  <script src="js/jquery.min.js"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/mdb.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/app.js"></script>
+  <script src="../js/jquery.min.js"></script>
+  <script src="../js/bootstrap.bundle.min.js"></script>
+  <script src="../js/mdb.min.js"></script>
+  <script src="../js/owl.carousel.min.js"></script>
+  <script src="../js/app.js"></script>
 </body>
 
 </html>
