--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </p>
           </div>
         </a>
-        <a href="/project" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
+        <a href="/projects" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
           <div class="icon-ani">
             <i class='bx bxs-building-house'></i>
             <span>Projects</span>
