--- a/studio/kelvin-profile.html
+++ b/studio/kelvin-profile.html
@@ -98,7 +98,7 @@
           <div class="d-flex flex-column justify-content-xl-start px-4 py-4  mt-2 mb-3">
             <div class="bread-crumb"><a class="directory" href="/">Home</a> &nbsp; <span class="arrow">></span>
               &nbsp; <a class="directory" href="/studio">Studio</a>&nbsp; <span class="arrow">></span> &nbsp; <a
-                class="directory" href="/kelvin-profile">Kelvin Tan</a> </div>
+                class="directory" href="/studio/kelvin-profile">Kelvin Tan</a> </div>
           </div>
           <div class="row d-flex justify-content-start">
             <div class="col-lg-5 col-xs-12">
